--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,11 @@
-server:
-    port: 8080
 spring:
     datasource:
         driverClassName: org.h2.Driver
-        password: 'null'
-        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:mem:dronedb
         username: sa
+        password: password
     h2:
         console:
             enabled: true
     jpa:
         database-platform: org.hibernate.dialect.H2Dialect
-        defer-datasource-initialization: true
